--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/caiguanhao/fartscroll.js/fartscroll.min.js"></script>
 
   </head>
   <body>
